--- a/proyectog3/pubspec.yaml
+++ b/proyectog3/pubspec.yaml
@@ -59,9 +59,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/shopping.png
+    - assets/profile_image.jpg
+    - assets/exclamacion.jpg
+    - assets/libros.png
+    - assets/shoe.png
+    - assets/shirt.png
+    - assets/shampoo.png
+    - assets/glasses.png
+    - assets/watch.png
+    - assets/stool.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
