--- a/proyectog3/pubspec.yaml
+++ b/proyectog3/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/glasses.png
     - assets/watch.png
     - assets/stool.png
+    - assets/product_image.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
